# literature_agent

./: .gitignore  README.md  design_specs.md  install.sh  pyproject.toml  requirements.txt
cli/: litsearch.py  parse_pdf.py
config/: agents.yaml  domains.yaml  pdf_unlock_params.yaml  rich_theme.json  settings.yaml
consts/: __init__.py  http_headers.py
scripts/: test_agents.py  test_gemini.py  test_llm_search_call.py  test_settings.py  test_triage_with_search_output.py  unpaywall_test.py
tests/: conftest.py  test_advanced_scraper.py  test_elink_pubmed.py  test_full_text_agent.py  test_litsearch.py  test_parse_json_xml.py  test_parse_pdf.py  test_pdf_unlock.py  test_resolve_pdf_link.py  test_resolve_pdf_link_retry.py  test_retrieve_europepmc.py  test_retrieve_full_text.py  test_retrieve_full_text_pubmed.py  test_retrieve_pmc.py  test_retrieve_unpaywall.py  test_search.py  test_triage.py
tests/fixtures/: elink_pubmed_38692467_llinks.json
tools/: _base.py  advanced_scraper.py  elink_pubmed.py  export.py  parse_json_xml.py  parse_pdf.py  ranking.py  resolve_pdf_link.py  retrieve_europepmc.py  retrieve_full_text.py  retrieve_pmc.py  retrieve_unpaywall.py  search.py  stealth_fetcher.js  triage.py
